# eris

./: .gitignore  .mcp.json  ARMENIAN_MIGRATION.md  CLAUDE.md  Cargo.toml  README.md  build.sh  flake.nix  vector_migrate.sh
crates/eris/: Cargo.toml
crates/eris-cli/: Cargo.toml
crates/eris-cli/src/: main.rs
crates/eris-mcp/: Cargo.toml
crates/eris-mcp/src/: main.rs
crates/eris/defs/chronos/: accelerates.ron  always.ron  concrescence.ron  eventually.ron  feedback_loop.ron  follows_resulting.ron  precedes.ron  prediction.ron  prehension.ron  process.ron  recursive_process.ron  reflexive_op.ron  reinforces.ron  repeats.ron  simultaneous.ron  state.ron  subverts.ron  succeeds.ron  teleological_anchor.ron
crates/eris/defs/citations/: article.ron  book.ron  org_article.ron  org_book.ron
crates/eris/defs/entities/: action.ron  agency.ron  concept.ron  date.ron  effect.ron  era.ron  event.ron  evolution.ron  field.ron  group.ron  idea.ron  identifier.ron  journal.ron  language.ron  loop.ron  meta.ron  method.ron  movement.ron  numinous.ron  organization.ron  paradox.ron  party.ron  performative_constitution.ron  person.ron  place.ron  project.ron  publisher.ron  question.ron  relation.ron  section.ron  tech.ron  tension.ron  transformation.ron  university.ron  user.ron  work.ron
crates/eris/defs/vectors/: agency.ron  antisymmetric.ron  boundary.ron  coherence.ron  cohesion.ron  component_stability.ron  conceptual_orthogonality.ron  consistency_specialization.ron  contextualization.ron  explanatory.ron  (+27 more)
crates/eris/schema/: data.sql  schema.sql
crates/eris/src/: citations.rs  export.rs  lib.rs  macros.rs  nix.rs  sql.rs  symbols.rs
(+104 files in other folders)
