[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/besm/eris"

[workspace.dependencies]
eris = { path = "crates/eris" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
regex = "1.10"
paste = "1.0"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
tokio = { version = "1.0", features = ["full"] }
