[package]
name = "eris-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server for ERIS notation system"

[[bin]]
name = "eris-mcp"
path = "src/main.rs"

[dependencies]
eris.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
